syntax = "proto3";

package blog;

option java_multiple_files = true;
option java_package = "com.proto.mongo.blog";

service BlogService {
  rpc CreateBlog (CreateBlogRequest) returns (CreateBlogResponse) {
  };
  rpc FindBlog (FindBlogRequest) returns (FindBlogResponse) {
  }; // return "NOT_FOUND" if blog does not exists
  rpc updateBlog (UpdateBlogRequest) returns (UpdateBlogResponse) {
  }; // return "NOT_FOUND" if blog does not exists
  rpc deleteBlog (DeleteBlogRequest) returns (DeleteBlogResponse) {
  };
  rpc listAllBlog (ListBlogRequest) returns (stream ListBlogResponse) {
  };

}

message Blog {
  string id = 1;
  string author_id = 2;
  string title = 3;
  string content = 4;
}

message ListBlogRequest {

}

message ListBlogResponse {
  Blog blog = 1;
}

message DeleteBlogRequest {
  string id = 1;
}

message DeleteBlogResponse {
  string id = 1;
}

message FindBlogRequest {
  string id = 1;
}
message FindBlogResponse {
  Blog blog = 1;
}

message CreateBlogRequest {
  Blog blog = 1; // id does not matter
}

message CreateBlogResponse {
  Blog blog = 1; // id will represent mongoDB data
}

message UpdateBlogRequest {
  Blog blog = 1;
}

message UpdateBlogResponse {
  Blog blog = 1;
}